[package]
name = "void_logic"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
petgraph = "0.8"
rand = "0.10"
# Physics engine behind the KineticWorld facade only — rapier types
# never appear in caller code (see docs/architecture/kinetic_engine_design.md).
rapier3d = "0.32"
